syntax = "proto3";

package client;

option go_package = "./client";

message PublicKey {
    bytes key = 1;
}

message HashID {
    bytes ID = 1;
    bytes Error = 2;
}

message GetRequest {
    bytes ID = 1;
}

message Client {
    bytes ID = 1;
    bytes PublicKey = 2;
}

message Account {
    bool Used = 1;
    bytes ID = 2;
    bytes PrivateKey = 3;
    bytes PublicKey = 4;
}

message Result {
    bool Ok = 1;
    bytes Error = 2;
}